# notifier

./: README.md  pyproject.toml  pytest.ini  requirements.txt
src/: cli.py  config.py
src/mailer/: mailer.py
src/reporter/: report.py
